fix text overlaping issue. changed mainStyla responsive core.

--- a/MainStyle.css
+++ b/MainStyle.css
@@ -77,11 +77,28 @@
           /*margin: 0 2.5rem;*/
         }
        
+@media screen and (max-width:1300px){
+  .hero-overlay{
+    top:15%;
+  } 
+
+}        
     
-@media screen and (max-width: 990px){
+@media screen and (max-width: 1175px){
     .hero-overlay{
-        top: 10px;
-    }}    
+        top: 15%;
+  }
+  .hero-overlay h1{
+    font-size: 60px;
+  }
+  
+  }
+
+  @media screen and (max-width: 1080px) {
+    .hero-overlay h1{
+      font-size: 50px;
+    
+  }  
    
 @media screen and (max-width: 920px){
     .frase{
